--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WEBSTUDIO - Effective Solutions For Your Business</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="">
+        <img src="/image/Logo.svg" alt="Logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
