--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WEBSTUDIO - Effective Solutions For Your Business</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <a href="">
         <img src="/image/Logo.svg" alt="Logo" />
       </a>
@@ -20,7 +20,76 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <!--Section 1 - Top Line-->
+      <section>
+        <h1>Effective Solutions For Your Business</h1>
+        <button>Order Service</button>
+      </section>
+      <!--Section 2 - Features-->
+      <section>
+        <div>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </div>
+        <div>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </div>
+        <div>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </div>
+        <div>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </div>
+      </section>
+      <!--Section 3 - Our Team-->
+      <section>
+        <h2>Our Team</h2>
+        <div>
+          <img src="/image/img1.jpg" alt="Mark Guerrero" />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </div>
+        <div>
+          <img src="/image/img2.jpg" alt="Tom Ford" />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </div>
+        <div>
+          <img src="/image/img3.jpg" alt="Camila Garcia" />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </div>
+        <div>
+          <img src="/image/img4.jpg" alt="Daniel Wilson" />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <a href="" id="#header">
+        <img src="/image/Logo.svg" alt="Logo" />
+      </a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
