--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="/image/img001.png" alt="Mark Guerrero" />
+          <img src="/..image/img001.png" alt="Mark Guerrero" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
