--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p>Product Designer</p>
         </div>
         <div>
-          <img src="/image/img2.jpg" alt="Tom Ford" />
+          <img src="./image/img02.jpg" alt="Tom Ford" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </div>
