--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header id="header">
       <a href="">
-        <img src="/image/Logo.svg" alt="Logo" />
+        <img src="./image/Logo.jpg" alt="Logo" />
       </a>
       <nav>
         <ul>
@@ -61,22 +61,22 @@
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="./image/img001.jpg" alt="Mark Guerrero" />
+          <img src="./image/img1.jpg" alt="Mark Guerrero" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
         <div>
-          <img src="./image/img02.jpg" alt="Tom Ford" />
+          <img src="./image/img2.jpg" alt="Tom Ford" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </div>
         <div>
-          <img src="/image/img3.jpg" alt="Camila Garcia" />
+          <img src="./image/img3.jpg" alt="Camila Garcia" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </div>
         <div>
-          <img src="/image/img4.jpg" alt="Daniel Wilson" />
+          <img src="./image/img4.jpg" alt="Daniel Wilson" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </div>
@@ -84,7 +84,7 @@
     </main>
     <footer>
       <a href="" id="#header">
-        <img src="/image/Logo.svg" alt="Logo" />
+        <img src="./image/Logo.jpg" alt="Logo" />
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
