--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO - Effective Solutions For Your Business</title>
+    <title>WEB STUDIO - Effective Solutions For Your Business</title>
   </head>
   <body>
     <header id="header">
       <a href="">
-        <img src="./image/Logo.jpg" alt="Logo" />
+        <img src="./images/Logo.jpg" alt="WEB STUDIO" />
       </a>
       <nav>
         <ul>
@@ -84,7 +84,7 @@
     </main>
     <footer>
       <a href="" id="#header">
-        <img src="./image/Logo.jpg" alt="Logo" />
+        <img src="./images/Logo.jpg" alt="WEB STUDIO" />
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
