--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEB STUDIO - Effective Solutions For Your Business</title>
+    <title>WebStudio - Effective Solutions For Your Business</title>
   </head>
   <body>
-    <header id="header">
-      <a href="">
-        <img src="./images/Logo.jpg" alt="WEB STUDIO" />
-      </a>
+    <header>
       <nav>
         <ul>
+          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
@@ -61,31 +59,29 @@
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="./image/img1.jpg" alt="Mark Guerrero" />
+          <img src="./image/img1.jpg" alt="Mark Guerrero" width="260" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
         <div>
-          <img src="./image/img2.jpg" alt="Tom Ford" />
+          <img src="./image/img2.jpg" alt="Tom Ford" width="260" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </div>
         <div>
-          <img src="./image/img3.jpg" alt="Camila Garcia" />
+          <img src="./image/img3.jpg" alt="Camila Garcia" width="260" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </div>
         <div>
-          <img src="./image/img4.jpg" alt="Daniel Wilson" />
+          <img src="./image/img4.jpg" alt="Daniel Wilson" width="260" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </div>
       </section>
     </main>
     <footer>
-      <a href="" id="#header">
-        <img src="./images/Logo.jpg" alt="WEB STUDIO" />
-      </a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
