--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!--Section 1 - Top Line-->
       <section>
         <h1>Effective Solutions For Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <!--Section 2 - Features-->
       <section>
