--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="./image/img1.jpg" alt="Mark Guerrero" />
+          <img src="./image/img1.jpg" alt="Mark Guerrero" width="260" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
