--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="./image/img1.jpg" alt="Mark Guerrero" width="260" />
+          <img src="./images/imgmark.jpg" alt="Mark Guerrero" width="260" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
         <div>
-          <img src="./image/img2.jpg" alt="Tom Ford" width="260" />
+          <img src="./images/imgtom.jpg" alt="Tom Ford" width="260" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </div>
         <div>
-          <img src="./image/img3.jpg" alt="Camila Garcia" width="260" />
+          <img src="./images/imgcamila.jpg" alt="Camila Garcia" width="260" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </div>
         <div>
-          <img src="./image/img4.jpg" alt="Daniel Wilson" width="260" />
+          <img src="./images/imgdaniel.jpg" alt="Daniel Wilson" width="260" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </div>
