--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
       <!--Section 2 - Features-->
       <section>
-        <h2></h2>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
