--- a/index.html
+++ b/index.html
@@ -94,22 +94,38 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/imgbankingapp.jpg" alt="Banking App" />
+            <img
+              src="./images/imgbankingapp.jpg"
+              alt="Banking App"
+              width="360"
+            />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/imgcashlesspayment.jpg" alt="Cashless Payment" />
+            <img
+              src="./images/imgcashlesspayment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/imgmeditationapp.jpg" alt="Meditation App" />
+            <img
+              src="./images/imgmeditationapp.jpg"
+              alt="Meditation App"
+              width="360"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/imgtaxiservice.jpg" alt="Taxi Service" />
+            <img
+              src="./images/imgtaxiservice.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
@@ -117,12 +133,17 @@
             <img
               src="./images/imgscreenillustrations.jpg"
               alt="Screen Illustrations"
+              width="360"
             />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/imgonlinecourses.jpg" alt="Online Courses" />
+            <img
+              src="./images/imgonlinecourses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
