--- a/index.html
+++ b/index.html
@@ -4,103 +4,126 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio - Effective Solutions For Your Business</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <!-- #region Top Line -->
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="page-nav">
+        <a href="./index.html" class="logo-link"
+          ><span class="logo-link-first">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="" class="link">Studio</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address-list">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
+    <!-- #endregion Top Line -->
     <main>
-      <!--Section 1 - Top Line-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- #region Hero-->
+      <section class="hero">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
-      <!--Section 2 - Features-->
-      <section>
+      <!-- #endregion Hero -->
+      <!-- #region Features-->
+      <section class="features">
         <h2>Features</h2>
-        <ul>
+        <ul class="features-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <!--Section 3 - Our Team-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <!-- #endregion Features -->
+      <!-- #region Our Team-->
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/imgmark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/imgtom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/imgcamila.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/imgdaniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <!-- Section 4 - Our Portfolio -->
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+      <!-- #endregion Our Team -->
+      <!-- #region Our Portfolio -->
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
           <li>
             <img
               src="./images/imgbankingapp.jpg"
               alt="Banking App"
               width="360"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="title">Banking App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -108,8 +131,8 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="title">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -117,8 +140,8 @@
               alt="Meditation App"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="title">Meditation App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -126,8 +149,8 @@
               alt="Taxi Service"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="title">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -135,8 +158,8 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="title">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -144,18 +167,24 @@
               alt="Online Courses"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="title">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
+      <!-- #endregion Our Portfolio -->
     </main>
+    <!-- #region Footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo-link"
+        ><span class="logo-link-first">Web</span
+        ><span class="logo-link-last">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- #endregion Footer -->
   </body>
 </html>
