--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <header>
       <nav class="page-nav">
         <a href="./index.html" class="logo-link"
-          ><span class="logo-link-first">Web</span>Studio</a
+          >Web<span class="logo-link-last">Studio</span></a
         >
         <ul>
-          <li><a href="" class="link">Studio</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
@@ -89,23 +89,43 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-          <li>
-            <img src="./images/imgmark.jpg" alt="Mark Guerrero" width="264" />
+          <li class="team-li">
+            <img
+              src="./images/imgmark.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              class="team-photo"
+            />
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/imgtom.jpg" alt="Tom Ford" width="264" />
+          <li class="team-li">
+            <img
+              src="./images/imgtom.jpg"
+              alt="Tom Ford"
+              width="264"
+              class="team-photo"
+            />
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/imgcamila.jpg" alt="Camila Garcia" width="264" />
+          <li class="team-li">
+            <img
+              src="./images/imgcamila.jpg"
+              alt="Camila Garcia"
+              width="264"
+              class="team-photo"
+            />
             <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
-            <img src="./images/imgdaniel.jpg" alt="Daniel Wilson" width="264" />
+          <li class="team-li">
+            <img
+              src="./images/imgdaniel.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              class="team-photo"
+            />
             <h3 class="title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </li>
@@ -175,10 +195,9 @@
       <!-- #endregion Our Portfolio -->
     </main>
     <!-- #region Footer -->
-    <footer>
+    <footer class="page-footer">
       <a href="./index.html" class="logo-link"
-        ><span class="logo-link-first">Web</span
-        ><span class="logo-link-last">Studio</span></a
+        >Web<span class="logo-link-last">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
